Adding saved model files within model directory for keras implementation of LeNet and AlexNet

--- a/code/keras/LeNet/myLeNet.ipynb
+++ b/code/keras/LeNet/myLeNet.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import neccessary libraries\n",
     "import keras\n",
@@ -34,13 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 7s 1us/step\n",
       "x_train shape: (60000, 28, 28, 1)\n",
       "60000 No. of training images\n",
       "10000 No. of test images\n"
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,38 +153,38 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/12\n",
-      "60000/60000 [==============================] - 307s 5ms/step - loss: 0.2581 - acc: 0.9205 - val_loss: 0.0566 - val_acc: 0.9828\n",
+      "60000/60000 [==============================] - 124s 2ms/step - loss: 0.2568 - acc: 0.9207 - val_loss: 0.0552 - val_acc: 0.9821\n",
       "Epoch 2/12\n",
-      "60000/60000 [==============================] - 277s 5ms/step - loss: 0.0847 - acc: 0.9748 - val_loss: 0.0391 - val_acc: 0.9869\n",
+      "60000/60000 [==============================] - 117s 2ms/step - loss: 0.0867 - acc: 0.9738 - val_loss: 0.0399 - val_acc: 0.9865\n",
       "Epoch 3/12\n",
-      "60000/60000 [==============================] - 276s 5ms/step - loss: 0.0629 - acc: 0.9813 - val_loss: 0.0321 - val_acc: 0.9894\n",
+      "60000/60000 [==============================] - 120s 2ms/step - loss: 0.0636 - acc: 0.9810 - val_loss: 0.0314 - val_acc: 0.9888\n",
       "Epoch 4/12\n",
-      "60000/60000 [==============================] - 272s 5ms/step - loss: 0.0526 - acc: 0.9839 - val_loss: 0.0319 - val_acc: 0.9903\n",
+      "60000/60000 [==============================] - 121s 2ms/step - loss: 0.0548 - acc: 0.9834 - val_loss: 0.0303 - val_acc: 0.9900\n",
       "Epoch 5/12\n",
-      "60000/60000 [==============================] - 273s 5ms/step - loss: 0.0442 - acc: 0.9865 - val_loss: 0.0291 - val_acc: 0.9905\n",
+      "60000/60000 [==============================] - 118s 2ms/step - loss: 0.0472 - acc: 0.9860 - val_loss: 0.0366 - val_acc: 0.9880\n",
       "Epoch 6/12\n",
-      "60000/60000 [==============================] - 272s 5ms/step - loss: 0.0400 - acc: 0.9877 - val_loss: 0.0278 - val_acc: 0.9908\n",
+      "60000/60000 [==============================] - 121s 2ms/step - loss: 0.0420 - acc: 0.9874 - val_loss: 0.0294 - val_acc: 0.9905\n",
       "Epoch 7/12\n",
-      "60000/60000 [==============================] - 272s 5ms/step - loss: 0.0365 - acc: 0.9890 - val_loss: 0.0281 - val_acc: 0.9909\n",
+      "60000/60000 [==============================] - 116s 2ms/step - loss: 0.0372 - acc: 0.9891 - val_loss: 0.0254 - val_acc: 0.9921\n",
       "Epoch 8/12\n",
-      "60000/60000 [==============================] - 273s 5ms/step - loss: 0.0319 - acc: 0.9906 - val_loss: 0.0269 - val_acc: 0.9912\n",
+      "60000/60000 [==============================] - 128s 2ms/step - loss: 0.0348 - acc: 0.9889 - val_loss: 0.0284 - val_acc: 0.9917\n",
       "Epoch 9/12\n",
-      "60000/60000 [==============================] - 272s 5ms/step - loss: 0.0305 - acc: 0.9908 - val_loss: 0.0265 - val_acc: 0.9914\n",
+      "60000/60000 [==============================] - 131s 2ms/step - loss: 0.0307 - acc: 0.9903 - val_loss: 0.0318 - val_acc: 0.9900\n",
       "Epoch 10/12\n",
-      "60000/60000 [==============================] - 272s 5ms/step - loss: 0.0282 - acc: 0.9916 - val_loss: 0.0257 - val_acc: 0.9920\n",
+      "60000/60000 [==============================] - 122s 2ms/step - loss: 0.0309 - acc: 0.9903 - val_loss: 0.0269 - val_acc: 0.9910\n",
       "Epoch 11/12\n",
-      "60000/60000 [==============================] - 273s 5ms/step - loss: 0.0275 - acc: 0.9916 - val_loss: 0.0271 - val_acc: 0.9919\n",
+      "60000/60000 [==============================] - 128s 2ms/step - loss: 0.0289 - acc: 0.9916 - val_loss: 0.0259 - val_acc: 0.9920\n",
       "Epoch 12/12\n",
-      "60000/60000 [==============================] - 273s 5ms/step - loss: 0.0246 - acc: 0.9919 - val_loss: 0.0235 - val_acc: 0.9925\n"
+      "60000/60000 [==============================] - 133s 2ms/step - loss: 0.0263 - acc: 0.9920 - val_loss: 0.0255 - val_acc: 0.9905\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x20b423734e0>"
+       "<keras.callbacks.History at 0x18eed615630>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,15 +206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.023475631990989496\n",
-      "Test accuracy: 0.9925\n"
+      "Test loss: 0.02549291779803043\n",
+      "Test accuracy: 0.9905\n"
      ]
     }
    ],
@@ -227,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +246,8 @@
      "text": [
       "Saved model to disk\n",
       "Loaded model from disk\n",
-      "Test loss: 0.023475631990989496\n",
-      "Test accuracy: 0.9925\n"
+      "Test loss: 0.02549291779803043\n",
+      "Test accuracy: 0.9905\n"
      ]
     }
    ],
@@ -246,21 +256,21 @@
     "\n",
     "# serialize model to JSON\n",
     "lenet_model_json = model.to_json()\n",
-    "with open(\"lenet_model.json\", \"w\") as json_file:\n",
+    "with open(\"model/lenet_model.json\", \"w\") as json_file:\n",
     "    json_file.write(lenet_model_json)\n",
     "\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"lenet_model_weights.h5\")\n",
+    "model.save_weights(\"model/lenet_model_weights.h5\")\n",
     "print(\"Saved model to disk\")\n",
     "\n",
     "# load the saved model\n",
-    "lenet_model_file = open('lenet_model.json', 'r')\n",
+    "lenet_model_file = open('model/lenet_model.json', 'r')\n",
     "lenet_model = lenet_model_file.read()\n",
     "lenet_model_file.close()\n",
     "lenet_model = model_from_json(lenet_model)\n",
     "\n",
     "# load weights into new model\n",
-    "lenet_model.load_weights(\"lenet_model_weights.h5\")\n",
+    "lenet_model.load_weights(\"model/lenet_model_weights.h5\")\n",
     "print(\"Loaded model from disk\")\n",
     " \n",
     "#evaluate the loaded model\n",
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +305,8 @@
      "text": [
       "Saved model to disk\n",
       "Loaded model from disk\n",
-      "Test loss: 0.023475631990989496\n",
-      "Test accuracy: 0.9925\n"
+      "Test loss: 0.02549291779803043\n",
+      "Test accuracy: 0.9905\n"
      ]
     }
    ],
@@ -305,21 +315,21 @@
     "\n",
     "# serialize model to JSON\n",
     "lenet_model_yaml = model.to_yaml()\n",
-    "with open(\"lenet_model.yaml\", \"w\") as yaml_file:\n",
+    "with open(\"model/lenet_model.yaml\", \"w\") as yaml_file:\n",
     "    yaml_file.write(lenet_model_yaml)\n",
     "\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"lenet_model_weights.h5\")\n",
+    "model.save_weights(\"model/lenet_model_weights.h5\")\n",
     "print(\"Saved model to disk\")\n",
     "\n",
     "# load the saved model\n",
-    "lenet_model_file = open('lenet_model.yaml', 'r')\n",
+    "lenet_model_file = open('model/lenet_model.yaml', 'r')\n",
     "lenet_model = lenet_model_file.read()\n",
     "lenet_model_file.close()\n",
     "lenet_model = model_from_yaml(lenet_model)\n",
     "\n",
     "# load weights into new model\n",
-    "lenet_model.load_weights(\"lenet_model_weights.h5\")\n",
+    "lenet_model.load_weights(\"model/lenet_model_weights.h5\")\n",
     "print(\"Loaded model from disk\")\n",
     " \n",
     "#evaluate the loaded model\n",
@@ -331,20 +341,6 @@
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
