--- a/code/keras/AlexNet/myAlexNet.ipynb
+++ b/code/keras/AlexNet/myAlexNet.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import neccessary libraries\n",
     "import keras\n",
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -91,7 +83,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 8, 8, 96)          7296      \n",
+      "conv2d_1 (Conv2D)            (None, 8, 8, 96)          2688      \n",
       "_________________________________________________________________\n",
       "batch_normalization_1 (Batch (None, 8, 8, 96)          384       \n",
       "_________________________________________________________________\n",
@@ -99,7 +91,7 @@
       "_________________________________________________________________\n",
       "max_pooling2d_1 (MaxPooling2 (None, 4, 4, 96)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 4, 4, 256)         614656    \n",
+      "conv2d_2 (Conv2D)            (None, 4, 4, 256)         221440    \n",
       "_________________________________________________________________\n",
       "batch_normalization_2 (Batch (None, 4, 4, 256)         1024      \n",
       "_________________________________________________________________\n",
@@ -147,8 +139,8 @@
       "_________________________________________________________________\n",
       "dense_3 (Dense)              (None, 10)                40970     \n",
       "=================================================================\n",
-      "Total params: 21,632,778\n",
-      "Trainable params: 21,613,642\n",
+      "Total params: 21,234,954\n",
+      "Trainable params: 21,215,818\n",
       "Non-trainable params: 19,136\n",
       "_________________________________________________________________\n"
      ]
@@ -161,14 +153,14 @@
     "# Layer 1: Convolution + Max pooling + Batch Normalization\n",
     "# Input : 224x224x3, Output: 55x55x96, pooling: 27x27x96\n",
     "# model.add(Conv2D(input_shape=(224,224,3), filters=96, kernel_size=(11, 11), strides=(4, 4), padding='same'))\n",
-    "model.add(Conv2D(input_shape=(32,32,3), filters=96, kernel_size=(5, 5), strides=(4, 4), padding='same'))\n",
+    "model.add(Conv2D(input_shape=(32,32,3), filters=96, kernel_size=(3, 3), strides=(4, 4), padding='same'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2,2), strides=(2,2)))\n",
     "\n",
     "# Layer 2: Convolution + Max pooling + Batch Normalization\n",
     "# Input : 27x27x96, Output: 27x27x256, pooling: 13x13x256\n",
-    "model.add(Conv2D(filters=256, kernel_size=(5,5), strides=(1,1), padding='same'))\n",
+    "model.add(Conv2D(filters=256, kernel_size=(3,3), strides=(1,1), padding='same'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2,2), strides=(2,2)))\n",
@@ -217,10 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model weights from disk\n"
+     ]
+    }
+   ],
    "source": [
+    "# Load the old weights (if available)\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "weights_file = Path(\"model/alexnet_model_weights.h5\")\n",
+    "if weights_file.is_file():\n",
+    "    model.load_weights(weights_file)\n",
+    "    print(\"Loaded model weights from disk\")\n",
+    "    \n",
     "model.compile(loss=keras.losses.categorical_crossentropy, \n",
     "              optimizer=keras.optimizers.Adam(),\n",
     "              metrics=['accuracy'])"
@@ -245,19 +254,15 @@
      "output_type": "stream",
      "text": [
       "Train on 50000 samples, validate on 10000 samples\n",
-      "Epoch 1/10\n",
-      "50000/50000 [==============================] - 1332s 27ms/step - loss: 1.9184 - acc: 0.3931 - val_loss: 3.1228 - val_acc: 0.3756\n",
-      "Epoch 2/10\n",
-      "50000/50000 [==============================] - 1501s 30ms/step - loss: 1.4267 - acc: 0.5229 - val_loss: 2.4057 - val_acc: 0.3839\n",
-      "Epoch 3/10\n",
-      "15360/50000 [========>.....................] - ETA: 17:01 - loss: 1.2790 - acc: 0.5633"
+      "Epoch 1/1\n",
+      "25088/50000 [==============>...............] - ETA: 4:19 - loss: 1.2265 - acc: 0.5865"
      ]
     }
    ],
    "source": [
     "model.fit(x_train, y_train,\n",
     "          batch_size=256,\n",
-    "          epochs=10,\n",
+    "          epochs=1,\n",
     "          verbose=1,\n",
     "          validation_data=(x_test, y_test),\n",
     "          shuffle=True)"
@@ -272,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 1.4018274978637695\n",
-      "Test accuracy: 0.5965\n"
+      "Test loss: 3.683359085083008\n",
+      "Test accuracy: 0.3551\n"
      ]
     }
    ],
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,8 +317,8 @@
      "text": [
       "Saved model to disk\n",
       "Loaded model from disk\n",
-      "Test loss: 1.4018274978637695\n",
-      "Test accuracy: 0.5965\n"
+      "Test loss: 3.683359085083008\n",
+      "Test accuracy: 0.3551\n"
      ]
     }
    ],
@@ -322,21 +327,21 @@
     "\n",
     "# serialize model to JSON\n",
     "alexnet_model_json = model.to_json()\n",
-    "with open(\"alexnet_model.json\", \"w\") as json_file:\n",
+    "with open(\"model/alexnet_model.json\", \"w\") as json_file:\n",
     "    json_file.write(alexnet_model_json)\n",
     "\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"alexnet_model_weights.h5\")\n",
+    "model.save_weights(\"model/alexnet_model_weights.h5\")\n",
     "print(\"Saved model to disk\")\n",
     "\n",
     "# load the saved model\n",
-    "alexnet_model_file = open('alexnet_model.json', 'r')\n",
+    "alexnet_model_file = open('model/alexnet_model.json', 'r')\n",
     "alexnet_model = alexnet_model_file.read()\n",
     "alexnet_model_file.close()\n",
     "alexnet_model = model_from_json(alexnet_model)\n",
     "\n",
     "# load weights into new model\n",
-    "alexnet_model.load_weights(\"alexnet_model_weights.h5\")\n",
+    "alexnet_model.load_weights(\"model/alexnet_model_weights.h5\")\n",
     "print(\"Loaded model from disk\")\n",
     " \n",
     "#evaluate the loaded model\n",
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +376,8 @@
      "text": [
       "Saved model to disk\n",
       "Loaded model from disk\n",
-      "Test loss: 1.4018274978637695\n",
-      "Test accuracy: 0.5965\n"
+      "Test loss: 3.683359085083008\n",
+      "Test accuracy: 0.3551\n"
      ]
     }
    ],
@@ -381,21 +386,21 @@
     "\n",
     "# serialize model to JSON\n",
     "alexnet_model_yaml = model.to_yaml()\n",
-    "with open(\"alexnet_model.yaml\", \"w\") as yaml_file:\n",
+    "with open(\"model/alexnet_model.yaml\", \"w\") as yaml_file:\n",
     "    yaml_file.write(alexnet_model_yaml)\n",
     "\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"alexnet_model_weights.h5\")\n",
+    "model.save_weights(\"model/alexnet_model_weights.h5\")\n",
     "print(\"Saved model to disk\")\n",
     "\n",
     "# load the saved model\n",
-    "alexnet_model_file = open('alexnet_model.yaml', 'r')\n",
+    "alexnet_model_file = open('model/alexnet_model.yaml', 'r')\n",
     "alexnet_model = alexnet_model_file.read()\n",
     "alexnet_model_file.close()\n",
     "alexnet_model = model_from_yaml(alexnet_model)\n",
     "\n",
     "# load weights into new model\n",
-    "alexnet_model.load_weights(\"alexnet_model_weights.h5\")\n",
+    "alexnet_model.load_weights(\"model/alexnet_model_weights.h5\")\n",
     "print(\"Loaded model from disk\")\n",
     " \n",
     "#evaluate the loaded model\n",
@@ -407,6 +412,13 @@
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
