changes to AlexNet (cifar10) to improve accuracy > 80% on train, test ~50%, check for overfit

--- a/code/keras/AlexNet/myAlexNet.ipynb
+++ b/code/keras/AlexNet/myAlexNet.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import neccessary libraries\n",
     "import keras\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -137,11 +145,19 @@
       "_________________________________________________________________\n",
       "dropout_2 (Dropout)          (None, 4096)              0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                40970     \n",
+      "dense_3 (Dense)              (None, 4096)              16781312  \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_8 (Batch (None, 4096)              16384     \n",
+      "_________________________________________________________________\n",
+      "activation_8 (Activation)    (None, 4096)              0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 4096)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 10)                40970     \n",
       "=================================================================\n",
-      "Total params: 21,234,954\n",
-      "Trainable params: 21,215,818\n",
-      "Non-trainable params: 19,136\n",
+      "Total params: 38,032,650\n",
+      "Trainable params: 38,005,322\n",
+      "Non-trainable params: 27,328\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -190,7 +206,12 @@
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
     "\n",
-    "model.add(Dense(4096, activation='relu'))\n",
+    "model.add(Dense(4096))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "\n",
+    "model.add(Dense(4096))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +244,6 @@
    "source": [
     "# Load the old weights (if available)\n",
     "from pathlib import Path\n",
-    "\n",
     "\n",
     "weights_file = Path(\"model/alexnet_model_weights.h5\")\n",
     "if weights_file.is_file():\n",
@@ -244,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -255,8 +275,18 @@
      "text": [
       "Train on 50000 samples, validate on 10000 samples\n",
       "Epoch 1/1\n",
-      "25088/50000 [==============>...............] - ETA: 4:19 - loss: 1.2265 - acc: 0.5865"
+      "50000/50000 [==============================] - 668s 13ms/step - loss: 0.5185 - acc: 0.8215 - val_loss: 1.3269 - val_acc: 0.6202\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x18f83f46908>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -264,7 +294,7 @@
     "          batch_size=256,\n",
     "          epochs=1,\n",
     "          verbose=1,\n",
-    "          validation_data=(x_test, y_test),\n",
+    "          validation_data =(x_test, y_test),\n",
     "          shuffle=True)"
    ]
   },
@@ -277,18 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test loss: 3.683359085083008\n",
-      "Test accuracy: 0.3551\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
@@ -308,20 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to disk\n",
-      "Loaded model from disk\n",
-      "Test loss: 3.683359085083008\n",
-      "Test accuracy: 0.3551\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import model_from_json\n",
     "\n",
