clean-up mySRGAN

--- a/code/keras/SRGAN/mySRGAN.ipynb
+++ b/code/keras/SRGAN/mySRGAN.ipynb
@@ -27,53 +27,15 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
+    "import imageio\n",
     "\n",
     "n_epoch = 200\n",
     "batch_size = 1\n",
     "lr_init = 1e-4\n",
     "\n",
-    "hr_images_path = \"Data\\DIV2K_train_HR\\DIV2K_train_HR\\*\"\n",
-    "hr_images_path = glob(hr_images_path)\n",
-    "hr_images_path = np.random.choice(hr_images_path, size=batch_size)\n",
-    "\n",
-    "\n",
-    "hr_images_ds = []\n",
-    "lr_images_ds = []\n",
-    "\n",
-    "for img_path in hr_images_path:\n",
-    "    img = plt.imread(img_path)\n",
-    "    print(img.dtype)\n",
-    "    plt.imshow(img)\n",
-    "    hr_patch = tf.random_crop(img, [256, 256, 3])\n",
-    "    print(hr_patch.dtype)\n",
-    "    hr_patch = np.array(hr_patch) / 127.5 - 1\n",
-    "    hr_patch  = tf.image.random_flip_left_right(hr_patch)\n",
-    "    lr_patch  = tf.image.resize_images(hr_patch, size=[64, 64])\n",
-    "    hr_images_ds.append(hr_patch)\n",
-    "    lr_images_ds.append(lr_patch)\n",
-    "\n",
-    "# Display the cropped image\n",
-    "#train_images_ds = tf.data.Dataset.from_tensor_slices((lr_images_ds, hr_images_ds))\n",
-    "#train_images_ds = train_images_ds.repeat(300)\n",
-    "#train_images_ds = train_images_ds.shuffle(128)\n",
-    "#train_images_ds = train_images_ds.prefetch(2048)\n",
-    "#train_images_ds = train_images_ds.batch(16)\n",
-    "#print(train_images_ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from glob import glob\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "# prepare dataset function\n",
     "\n",
     "def PREPARE_DATASET():\n",
-    "    hr_images_path = \"Data\\DIV2K_train_HR\\DIV2K_train_HR\\*\"\n",
+    "    hr_images_path = 'Data\\DIV2K_train_HR\\DIV2K_train_HR\\*'\n",
     "    hr_images_path = glob(hr_images_path)\n",
     "    \n",
     "    lr_images_ds = []\n",
@@ -81,16 +43,19 @@
     "    \n",
     "    for n in range(batch_size):\n",
     "        img_path = np.random.choice(hr_images_path, size=batch_size)\n",
-    "        img = plt.imread(img_path)\n",
-    "        hr_patch = tf.random_crop(img, [256, 256, 3])\n",
-    "        hr_patch = tf.image.random_flip_left_right(hr_patch)\n",
-    "        lr_patch = tf.image.resize_images(hr_patch, size=[64, 64, 3])\n",
+    "        img_path = 'Data\\\\DIV2K_train_HR\\\\DIV2K_train_HR\\\\0296.png'\n",
+    "        print(img_path)\n",
+    "        img = imageio.imread(img_path)\n",
+    "        \n",
+    "        hr_patch = scipy.misc.imresize(img, (256, 256))\n",
+    "        lr_patch = scipy.misc.imresize(img, (64, 64))\n",
+    "\n",
     "        lr_images_ds.append(lr_patch)\n",
     "        hr_images_ds.append(hr_patch)\n",
+    "    \n",
     "    lr_images_ds = np.array(lr_images_ds)/127.5 - 1\n",
     "    hr_images_ds = np.array(hr_images_ds)/127.5 - 1\n",
-    "    print(lr_images_ds.shape)\n",
-    "    print(hr_images_ds.shape)\n",
+    "    \n",
     "    return hr_images_ds, lr_images_ds"
    ]
   },
@@ -120,8 +85,6 @@
     "from keras.layers import Input, Dense, Reshape, Flatten, Dropout, Concatenate\n",
     "from keras.layers import BatchNormalization, Activation, ZeroPadding2D, Add\n",
     "from keras.layers import PReLU, LeakyReLU\n",
-    "#from keras.layers import UpSampling2D, Conv2D\n",
-    "#from keras.layers.convolutional import UpSamping2D, Conv2D\n",
     "from keras.layers.convolutional import UpSampling2D, Conv2D\n",
     "\n",
     "from keras.applications import VGG19\n",
@@ -254,62 +217,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(?, 8, 8, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# define input shape\n",
-    "\n",
-    "# Training pipeline\n",
-    "def SRGAN_BUILD(input_shape, scale):\n",
-    "    # read inputs\n",
-    "    lr_patch = Input(input_shape)\n",
-    "    output_shape = (input_shape[0]*scale, input_shape[1]*scale, input_shape[2])\n",
-    "    hr_patch = Input(input_shape)\n",
-    "    \n",
-    "    # create optimizer\n",
-    "    optimizer = Adam(0.0002, 0.5)\n",
-    "    \n",
-    "    # building phase\n",
-    "    \n",
-    "    # use vgg feature: no training\n",
-    "    vgg_feature = VGG_FEATURES(output_shape)\n",
-    "    vgg_feature.trainable = False\n",
-    "    vgg_feature.compile(loss='mse', optimizer=optimizer, metrics=['accuracy'])\n",
-    "    \n",
-    "    # create the discriminator model\n",
-    "    srgan_dis = SRGAN_DIS(output_shape)\n",
-    "    srgan_dis.compile(loss='mse', optimizer=optimizer, metrics=['accuracy']) \n",
-    "    \n",
-    "    # create srgan complete model\n",
-    "    hr_patch = Input(output_shape)\n",
-    "    lr_patch = Input(input_shape)\n",
-    "    \n",
-    "    srgan_gen = SRGAN_GEN(input_shape)\n",
-    "    pred_hr = srgan_gen(lr_patch)\n",
-    "    pred_features = vgg_feature(pred_hr)\n",
-    "    srgan_dis.trainable = False\n",
-    "    real = srgan_dis(pred_hr)    \n",
-    "    srgan_complete = Model([lr_patch, hr_patch], [real, pred_features])\n",
-    "    srgan_complete.compile(loss=['binary_crossentropy', 'mse'], loss_weights=[1e-3, 1], optimizer=optimizer)\n",
-    "\n",
-    "\n",
-    "input_shape = (64, 64, 3)\n",
-    "scale = 4\n",
-    "SRGAN_BUILD(input_shape, scale)\n",
-    "#SRGAN_TRAIN(input_shape, n_epoch=100, batch_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -361,102 +268,8 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# prepare dataset function\n",
-    "\n",
-    "def PREPARE_DATASET():\n",
-    "    hr_images_path = 'Data\\DIV2K_train_HR\\*'\n",
-    "    hr_images_path = glob(hr_images_path)\n",
-    "    \n",
-    "    lr_images_ds = []\n",
-    "    hr_images_ds = []\n",
-    "    \n",
-    "    for n in range(batch_size):\n",
-    "        img_path = np.random.choice(hr_images_path, size=batch_size)\n",
-    "        img_path = 'Data\\\\DIV2K_train_HR\\\\0296.png'\n",
-    "        print(img_path)\n",
-    "        img = plt.imread(img_path)\n",
-    "        hr_patch = tf.random_crop(img, [256, 256, 3])\n",
-    "        hr_patch = tf.image.random_flip_left_right(hr_patch)\n",
-    "        lr_patch = tf.image.resize_images(hr_patch, size=[64, 64])\n",
-    "        lr_images_ds.append(lr_patch)\n",
-    "        hr_images_ds.append(hr_patch)\n",
-    "    \n",
-    "    print(lr_images_ds)\n",
-    "    lr_images_ds = np.array(lr_images_ds)/127.5 - 1\n",
-    "    hr_images_ds = np.array(hr_images_ds)/127.5 - 1\n",
-    "    \n",
-    "    print(lr_images_ds.shape)\n",
-    "    \n",
-    "    return hr_images_ds, lr_images_ds\n",
-    "\n",
-    "import imageio\n",
-    "\n",
-    "def PREPARE_DATASET_2():\n",
-    "    hr_images_path = 'Data\\DIV2K_train_HR\\DIV2K_train_HR\\*'\n",
-    "    hr_images_path = glob(hr_images_path)\n",
-    "    \n",
-    "    lr_images_ds = []\n",
-    "    hr_images_ds = []\n",
-    "    \n",
-    "    for n in range(batch_size):\n",
-    "        img_path = np.random.choice(hr_images_path, size=batch_size)\n",
-    "        img_path = 'Data\\\\DIV2K_train_HR\\\\DIV2K_train_HR\\\\0296.png'\n",
-    "        print(img_path)\n",
-    "        img = imageio.imread(img_path)\n",
-    "        \n",
-    "        hr_patch = scipy.misc.imresize(img, (256, 256))\n",
-    "        lr_patch = scipy.misc.imresize(img, (64, 64))\n",
-    "\n",
-    "        lr_images_ds.append(lr_patch)\n",
-    "        hr_images_ds.append(hr_patch)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    #print(lr_images_ds)\n",
-    "    lr_images_ds = np.array(lr_images_ds)/127.5 - 1\n",
-    "    hr_images_ds = np.array(hr_images_ds)/127.5 - 1\n",
-    "    \n",
-    "    print(lr_images_ds.shape)\n",
-    "    \n",
-    "    return hr_images_ds, lr_images_ds\n",
-    "\n",
     "\n",
     "# define input shape\n",
-    "\n",
-    "# Training pipeline\n",
-    "def SRGAN_BUILD(input_shape, scale):\n",
-    "    # read inputs\n",
-    "    lr_patch = Input(input_shape)\n",
-    "    output_shape = (input_shape[0]*scale, input_shape[1]*scale, input_shape[2])\n",
-    "    hr_patch = Input(input_shape)\n",
-    "    \n",
-    "    # create optimizer\n",
-    "    optimizer = Adam(0.0002, 0.5)\n",
-    "    \n",
-    "    # building phase\n",
-    "    \n",
-    "    # use vgg feature: no training\n",
-    "    vgg_feature = VGG_FEATURES(output_shape)\n",
-    "    vgg_feature.trainable = False\n",
-    "    vgg_feature.compile(loss='mse', optimizer=optimizer, metrics=['accuracy'])\n",
-    "    \n",
-    "    # create the discriminator model\n",
-    "    srgan_dis = SRGAN_DIS(output_shape)\n",
-    "    srgan_dis.compile(loss='mse', optimizer=optimizer, metrics=['accuracy']) \n",
-    "    \n",
-    "    # create srgan complete model\n",
-    "    hr_patch = Input(output_shape)\n",
-    "    lr_patch = Input(input_shape)\n",
-    "    \n",
-    "    srgan_gen = SRGAN_GEN(input_shape)\n",
-    "    pred_hr = srgan_gen(lr_patch)\n",
-    "    pred_features = vgg_feature(pred_hr)\n",
-    "    srgan_dis.trainable = False\n",
-    "    real = srgan_dis(pred_hr)    \n",
-    "    srgan_complete = Model([lr_patch, hr_patch], [real, pred_features])\n",
-    "    srgan_complete.compile(loss=['binary_crossentropy', 'mse'], loss_weights=[1e-3, 1], optimizer=optimizer)\n",
-    "\n",
-    "\n",
     "input_shape = (64, 64, 3)\n",
     "scale = 4\n",
     "SRGAN_BUILD(input_shape, scale)\n",
@@ -499,7 +312,8 @@
     "    \n",
     "    for n in range(n_epoch):\n",
     "        print(n)\n",
-    "        hr_patch, lr_patch = PREPARE_DATASET_2();\n",
+    "        # prepare dataset function\n",
+    "        hr_patch, lr_patch = PREPARE_DATASET();\n",
     "        print(lr_patch.shape)\n",
     "        print(lr_patch.size)\n",
     "        pred_hr = srgan_gen.predict(lr_patch)\n",
@@ -522,13 +336,6 @@
     "            \n",
     "SRGAN_TRAIN(input_shape, scale=4, n_epoch=1, batch_size=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
