updating image data pre-processing

--- a/code/keras/ICNet/myICNet.ipynb
+++ b/code/keras/ICNet/myICNet.ipynb
@@ -13,30 +13,55 @@
     "import matplotlib.pyplot as plt\n",
     "import imageio\n",
     "\n",
+    "batch_size = 1\n",
+    "num_classes = 64\n",
+    "image_shape = (640, 320)\n",
+    "image_l1_shape = (image_shape[0]//4, image_shape[1]//4)\n",
+    "image_l2_shape = (image_shape[0]//8, image_shape[1]//8)\n",
+    "image_l3_shape = (image_shape[0]//16, image_shape[1]//16)\n",
+    "\n",
     "def PREPARE_DATASET(batch_size=1):\n",
     "    images_path = 'Data\\\\MVD_research_samples\\\\North America\\\\*'\n",
     "    labels_path =  'Data\\\\'\n",
     "    \n",
-    "    images_ds = []\n",
-    "    labels_ds = []\n",
+    "    images_ds    = np.zeros((batch_size, input_shape[1],     input_shape[0], 3), dtype='float32')\n",
+    "    #images_l1_ds = np.zeros((batch_size, input_shape[1]//4,  input_shape[0]//4, self.n_classes), dtype='float32')\n",
+    "    #images_l2_ds = np.zeros((batch_size, input_shape[1]//8,  input_shape[0]//8, self.n_classes), dtype='float32')\n",
+    "    #images_l3_ds = np.zeros((batch_size, input_shape[1]//16, input_shape[0]//16, self.n_classes), dtype='float32')\n",
+    "\n",
+    "    label_l1_ds = np.zeros((batch_size, input_shape[1]//4,  input_shape[0]//4, self.n_classes), dtype='float32')\n",
+    "    label_l2_ds = np.zeros((batch_size, input_shape[1]//8,  input_shape[0]//8, self.n_classes), dtype='float32')\n",
+    "    label_l3_ds = np.zeros((batch_size, input_shape[1]//16, input_shape[0]//16, self.n_classes), dtype='float32')\n",
     "    \n",
     "    for n in range(batch_size):\n",
     "        img_path = np.random.choice(images_path, size=batch_size)\n",
+    "        label_path = np.random.choice(labels_path, size = batch_size)\n",
     "        \n",
-    "        print(img_path[0])\n",
-    "        img = imageio.imread(img_path[0])\n",
+    "        img   = imageio.imread(img_path[0])\n",
+    "        label = imageio.imread(label_path[0])\n",
     "        \n",
-    "        hr_patch = scipy.misc.imresize(img, (256, 256))\n",
-    "        lr_patch = scipy.misc.imresize(img, (64, 64))\n",
+    "        img    = scipy.misc.imresize(img, image_shape)\n",
+    "        #img_l1 = scipy.misc.imresize(img, image_l1_shape)\n",
+    "        #img_l2 = scipy.misc.imresize(img, image_l2_shape)\n",
+    "        #img_l3 = scipy.misc.imresize(img, image_l3_shape)\n",
+    "        \n",
+    "        label_l1 = scipy.misc.imresize(img, image_l1_shape)\n",
+    "        label_l2 = scipy.misc.imresize(img, image_l2_shape)\n",
+    "        label_l3 = scipy.misc.imresize(img, image_l3_shape)\n",
+    "        \n",
+    "        label_l1 = to_categorical(label_l1, num_classes).reshape((label.shape[0]//4, label.shape[1]//4, -1))\n",
+    "        label_l2 = to_categorical(label_l2, num_classes).reshape((label.shape[0]//8, label.shape[1]//8, -1))\n",
+    "        label_l3 = to_categorical(label_l3, num_classes).reshape((label.shape[0]//16, label.shape[1]//16, -1))\n",
     "\n",
-    "        lr_images_ds.append(lr_patch)\n",
-    "        hr_images_ds.append(hr_patch)\n",
-    "    \n",
-    "    lr_images_ds = np.array(lr_images_ds)/127.5 - 1\n",
-    "    hr_images_ds = np.array(hr_images_ds)/127.5 - 1\n",
+    "        images_ds[n]   = (np.array(img)  - 127.5) / 255.0\n",
+    "        label_l1_ds[n] = label_l1\n",
+    "        label_l2_ds[n] = label_l2\n",
+    "        label_l3_ds[n] = label_l3\n",
+    "        \n",
+    "    images_ds = (np.array(images_ds) - 127.5) / 255\n",
     "    \n",
     "    plt.imshow(hr_images_ds[0])\n",
-    "    return hr_images_ds, lr_images_ds"
+    "    return images_ds, label_l1_ds, label_l2_ds, label_l3_ds"
    ]
   },
   {
@@ -185,7 +210,25 @@
     }
    ],
    "source": [
-    "PREPARE_DATASET()"
+    "import scipy\n",
+    "\n",
+    "from keras.layers import Lambda\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "\n",
+    "\n",
+    "input_shape = (640, 320, num_classes)\n",
+    "\n",
+    "# build the ICNet Model\n",
+    "\n",
+    "def ICNET(input_shape):\n",
+    "    n0 = Input(input_shape)\n",
+    "    \n",
+    "    # 1/2 scale input image\n",
+    "    n = Lambda(lambda x: tf.image.resize_bilinear(n0, size=(int(n0.shape[1])//2, int(n0.shape[0])//2)), name='downsample_l1')(n0)\n",
+    "    n = Conv2D(32, 3, strides=2, padding='same', activation='relu')(n)\n",
+    "    n = Conv2D(32, 3, padding='same', activation='relu')(n)\n",
+    "    n = Conv2D(64, 3, padding='same', activation='relu')(n)\n",
+    "    n1 = MaxPooling2D(pool_size=3, strides=2)(n)\n"
    ]
   },
   {
