--- a/code/keras/ICNet/myICNet.ipynb
+++ b/code/keras/ICNet/myICNet.ipynb
@@ -228,7 +228,147 @@
     "    n = Conv2D(32, 3, strides=2, padding='same', activation='relu')(n)\n",
     "    n = Conv2D(32, 3, padding='same', activation='relu')(n)\n",
     "    n = Conv2D(64, 3, padding='same', activation='relu')(n)\n",
-    "    n1 = MaxPooling2D(pool_size=3, strides=2)(n)\n"
+    "    n1 = MaxPooling2D(pool_size=3, strides=2)(n)\n",
+    "    n = Conv2D(128, 1)(n1)\n",
+    "    \n",
+    "    n1 = Conv2D(32, 1, activation='relu')(n1)\n",
+    "    n1 = ZeroPadding2D()(n1)\n",
+    "    n1 = Conv2D(32, 3, activation='relu')(n1)\n",
+    "    n1 = Conv2D(128, 1)(n1)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n = Conv2D(32, 1, activation='relu')(n1)\n",
+    "    n = ZeroPadding2D()(n)\n",
+    "    n = Conv2D(32, 3, activation='relu')(n)\n",
+    "    n = Conv2D(128, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n = Conv2D(32, 1, activation='relu')(n1)\n",
+    "    n = ZeroPadding2D()(n)\n",
+    "    n = Conv2D(32, 3, activation='relu')(n)\n",
+    "    n = Conv2D(128, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(256, 1, strides=2)(n1)\n",
+    "    n1 = Conv2D(64, 1, strides=2, activation='relu')(n1)\n",
+    "    n1 = ZeroPadding2D()(n1)\n",
+    "    n1 = Conv2D(64, 3, activation='relu')(n1)\n",
+    "    n1 = Conv2D(256, 1)(n1)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n2 = Activation('relu')(n)\n",
+    "    \n",
+    "    \n",
+    "    # 1/4 scale input image\n",
+    "    n1 = Lambda(lambda x: tf.image.bilinear(x, size=(int(n0.shape[1]//2), int(n0.shape[0]//2))))(n2)\n",
+    "    n  = Conv2D(64, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D()(n)\n",
+    "    n  = Conv2D(64, 3, activation='relu')\n",
+    "    n  = Conv2D(256, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(64, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D()(n)\n",
+    "    n  = Conv2D(64, 3, activation='relu')(n)\n",
+    "    n  = Conv2D(256, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n = Conv2D(64, 1, activation='relu')(n1)\n",
+    "    n = ZeroPadding2D()(n)\n",
+    "    n = Conv2D(64, 3, activation='relu')(n)\n",
+    "    n = Conv2D(256, 1)(n)\n",
+    "    n = Add()([n, n1])\n",
+    "    n1 = Activation('relu')\n",
+    "    \n",
+    "    n  = Conv2D(512, 1)(n1)\n",
+    "    n1 = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n1 = ZeroPadding2D(padding=2)(n1)\n",
+    "    n1 = Conv2D(128, 3, dilation_rate=2, activation='relu')(n1)\n",
+    "    n1 = Conv2D(512, 1)(n1)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=2)(n)\n",
+    "    n  = Conv2D(128, 3, dilation_rate=2, activation='relu')(n)\n",
+    "    n  = Conv2D(512, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=2)(n)\n",
+    "    n  = Conv2D(128, 3, dilation_rate=2, activation='relu')(n)\n",
+    "    n  = Conv2D(512, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=2)(n)\n",
+    "    n  = Conv2D(128, 3, dilation_rate=2, activation='relu')(n)\n",
+    "    n  = Conv2D(512, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n  = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=2)(n)\n",
+    "    n  = Conv2D(128, 3, dilation_rate=2, activation='relu')(n)\n",
+    "    n  = Conv2D(512, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)   \n",
+    "    \n",
+    "    n  = Conv2D(128, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=2)(n)\n",
+    "    n  = Conv2D(128, 3, dilation_rate=2, activation='relu')(n)\n",
+    "    n  = Conv2D(512, 1)(n)\n",
+    "    n  = Add()([n, n1])\n",
+    "    n1 = Activation('relu')(n)     \n",
+    "    \n",
+    "    n1 = Conv2D(1024, 1)(n)\n",
+    "    n  = Conv2D(256, 1, activation='relu')(n)\n",
+    "    n  = ZeroPadding2D(padding=4)(n)\n",
+    "    n  = Conv2D(256, 3, dilation_rate=4, activation='relu')(n)\n",
+    "    n  = Conv2D(1024, 1)(n)\n",
+    "    n  = Add(name='conv5_1')([n,n1])\n",
+    "    n  = Activation('relu')(n)    \n",
+    "    \n",
+    "    n  = Conv2D(256, 1, activation='relu')(n1)\n",
+    "    n  = ZeroPadding2D(padding=4)(n)\n",
+    "    n  = Conv2D(256, 3, dilation_rate=4, activation='relu')(n)\n",
+    "    n  = Conv2D(1024, 1)(n)\n",
+    "    n  = Add()([n,n1])\n",
+    "    n1 = Activation('relu')(n)\n",
+    "    \n",
+    "    n = Conv2D(256, 1, activation='relu')(n1)\n",
+    "    n = ZeroPadding2D(padding=4)(n)\n",
+    "    n = Conv2D(256, 3, dilation_rate=4, activation='relu')(n)\n",
+    "    n = Conv2D(1024, 1)(n)\n",
+    "    n = Add()([n,n1])\n",
+    "    n = Activation('relu')(n)    \n",
+    "    \n",
+    "    h = n.shape[1]\n",
+    "    w = n.shape[2]\n",
+    "    \n",
+    "    n_pool1 = AveragePooling2D(pool_size=(h,w), strides=(h,w))(n)\n",
+    "    n_pool1 = Lamda(lambda x: tf.image.resize_bilinear(x, size=(h,w)))(n_pool1)\n",
+    "    n_pool2 = AveragePooling2D(pool_size=(h/2,w/2), strides=(h//2,w//2))(n)\n",
+    "    n_pool2 = Lambda(lambda x: tf.image.resize_bilinear(x, size=(h,w)))(n_pool2)\n",
+    "    n_pool3 = AveragePooling2D(pool_size=(h/3,w/3), strides=(h//3,w//3))(n)\n",
+    "    n_pool3 = Lambda(lambda x: tf.image.resize_bilinear(x, size=(h,w)))(n_pool3)\n",
+    "    n_pool4 = AveragePooling2D(pool_size=(h/4,w/4), strides=(h//4,w//4))(n)\n",
+    "    n_pool4 = Lambda(lambda x: tf.image.resize_bilinear(x, size=(h,w)))(n_pool4)\n",
+    "\n",
+    "    n  = Add()([y, n_pool1, n_pool2, n_pool3, n_pool4])\n",
+    "    n  = Conv2D(256, 1, activation='relu')(n)\n",
+    "    n3 = Lambda(lambda x: tf.image.resize_bilinear(x, size=(int(n0.shape[1]*2), int(n0.shape[0]*2))))(n)\n",
+    "    n  = ZeroPadding2D(padding=2)(n3)\n",
+    "    n = Conv2D(128,)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
